[gd_scene load_steps=12 format=3 uid="uid://bkkc2ooun2c5"]

[ext_resource type="Script" uid="uid://bpwlco3llm63m" path="res://MainScreen.gd" id="1_7pmop"]
[ext_resource type="Theme" uid="uid://dt7k2spik24qg" path="res://Theme/PatroPanelTheme.tres" id="2_b26h7"]
[ext_resource type="Script" uid="uid://bshshh7fckb6p" path="res://panel.gd" id="3_a8wb5"]
[ext_resource type="Texture2D" uid="uid://cfc41dq2bqcp6" path="res://icon.svg" id="4_6maps"]
[ext_resource type="Script" uid="uid://bsjiookk7pntb" path="res://Player.gd" id="5_aycgk"]
[ext_resource type="PackedScene" uid="uid://brdf6p4bmygxf" path="res://Scenes/led_button.tscn" id="6_b26h7"]
[ext_resource type="Script" uid="uid://djpy1dbqjulfw" path="res://Scripts/reset_button.gd" id="7_a8wb5"]

[sub_resource type="Gradient" id="Gradient_cfvxu"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0.411765, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j6ug8"]
gradient = SubResource("Gradient_cfvxu")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fj5cn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Theme" id="Theme_iy58a"]
Panel/styles/panel = SubResource("StyleBoxFlat_fj5cn")

[node name="MainScreen" type="CanvasLayer" groups=["MainScreen"]]
script = ExtResource("1_7pmop")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_j6ug8")

[node name="Border" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iy58a")

[node name="InfoPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(480, 128)
offset_left = 57.0
offset_top = 50.0
offset_right = 313.0
offset_bottom = 178.0
theme = ExtResource("2_b26h7")
script = ExtResource("3_a8wb5")

[node name="Container" type="VBoxContainer" parent="InfoPanel"]
clip_contents = true
custom_minimum_size = Vector2(464, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -47.0
offset_right = 232.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_b26h7")
alignment = 1

[node name="StatusLabel" type="Label" parent="InfoPanel/Container"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_b26h7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Status:"
vertical_alignment = 1

[node name="ClientIPLabel" type="Label" parent="InfoPanel/Container"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_b26h7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "IP:"
vertical_alignment = 1

[node name="AnalogPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(256, 256)
offset_left = 55.0
offset_top = 187.0
offset_right = 311.0
offset_bottom = 443.0
theme = ExtResource("2_b26h7")
script = ExtResource("3_a8wb5")

[node name="Icon" type="Sprite2D" parent="AnalogPanel"]
position = Vector2(124, 127)
texture = ExtResource("4_6maps")
script = ExtResource("5_aycgk")

[node name="TextPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(256, 256)
offset_left = 623.0
offset_top = 170.0
offset_right = 840.0
offset_bottom = 406.0
theme = ExtResource("2_b26h7")
script = ExtResource("3_a8wb5")

[node name="Container" type="VBoxContainer" parent="TextPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -115.0
offset_right = 120.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_b26h7")

[node name="TextScreen" type="Panel" parent="TextPanel/Container"]
clip_contents = true
custom_minimum_size = Vector2(240, 160)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="TextPanel/Container/TextScreen"]
custom_minimum_size = Vector2(208, 128)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "> MENSAGEM DE TESTE"

[node name="TextEdit" type="LineEdit" parent="TextPanel/Container"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("2_b26h7")
emoji_menu_enabled = false

[node name="Button" type="Button" parent="TextPanel/Container"]
layout_mode = 2
theme = ExtResource("2_b26h7")
text = "Enviar"

[node name="LedsPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(256, 72)
offset_left = 56.0
offset_top = 451.0
offset_right = 312.0
offset_bottom = 523.0
theme = ExtResource("2_b26h7")
script = ExtResource("3_a8wb5")

[node name="Container" type="HBoxContainer" parent="LedsPanel"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -24.0
offset_right = 112.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_b26h7")

[node name="RedButton" parent="LedsPanel/Container" instance=ExtResource("6_b26h7")]
layout_mode = 2
color = 0

[node name="GreenButton" parent="LedsPanel/Container" instance=ExtResource("6_b26h7")]
layout_mode = 2
text = "GREEN"
color = 1

[node name="BlueButton" parent="LedsPanel/Container" instance=ExtResource("6_b26h7")]
layout_mode = 2
text = "BLUE"
color = 2

[node name="ResetButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -64.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "RESET"
script = ExtResource("7_a8wb5")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="TextPanel/Container/Button" to="." method="_on_button_pressed"]
