[gd_scene load_steps=15 format=3 uid="uid://cfyxmknvyqf6"]

[ext_resource type="Script" uid="uid://bpwlco3llm63m" path="res://MainScreen.gd" id="1_w8k8r"]
[ext_resource type="Theme" uid="uid://dt7k2spik24qg" path="res://Theme/PatroPanelTheme.tres" id="2_hlj3r"]
[ext_resource type="Script" uid="uid://bshshh7fckb6p" path="res://panel.gd" id="3_vou0t"]
[ext_resource type="Texture2D" uid="uid://cfc41dq2bqcp6" path="res://icon.svg" id="8_2n0e4"]
[ext_resource type="Script" uid="uid://djpy1dbqjulfw" path="res://Scripts/reset_button.gd" id="8_w6ky5"]
[ext_resource type="PackedScene" uid="uid://bbvlppfjk0kjc" path="res://Scenes/TeleportButton.tscn" id="9_06kvj"]
[ext_resource type="PackedScene" uid="uid://bp46rpad118d6" path="res://Scenes/led_matrix_button.tscn" id="9_gm37t"]
[ext_resource type="PackedScene" uid="uid://bkkc2ooun2c5" path="res://MainScreen.tscn" id="10_4gqy6"]
[ext_resource type="Script" uid="uid://digpbaltebfdd" path="res://Scripts/MatrixBrightnessSlider.gd" id="10_137hx"]
[ext_resource type="PackedScene" uid="uid://c75ka2r24oues" path="res://Scenes/PianoButton.tscn" id="13_bf5xs"]

[sub_resource type="Gradient" id="Gradient_cfvxu"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0.411765, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j6ug8"]
gradient = SubResource("Gradient_cfvxu")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fj5cn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Theme" id="Theme_iy58a"]
Panel/styles/panel = SubResource("StyleBoxFlat_fj5cn")

[node name="PianoScreen" type="CanvasLayer" groups=["MainScreen"]]
script = ExtResource("1_w8k8r")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_j6ug8")

[node name="Border" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iy58a")

[node name="DebugLabel" type="Label" parent="."]
offset_left = 590.0
offset_top = 21.0
offset_right = 910.0
offset_bottom = 86.0
theme = ExtResource("2_hlj3r")
text = "DEBUG AXIS: "
autowrap_mode = 2

[node name="InfoPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(360, 128)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -410.0
offset_top = 13.0
offset_right = -50.0
offset_bottom = 141.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("2_hlj3r")
script = ExtResource("3_vou0t")

[node name="Container" type="VBoxContainer" parent="InfoPanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -47.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hlj3r")
alignment = 1

[node name="StatusLabel" type="Label" parent="InfoPanel/Container"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_hlj3r")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Status:"
vertical_alignment = 1

[node name="ClientIPLabel" type="Label" parent="InfoPanel/Container"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_hlj3r")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "IP:"
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -64.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "RESET"
script = ExtResource("8_w6ky5")
metadata/_edit_use_anchors_ = true

[node name="LedsMatrixPanel" type="Panel" parent="."]
visible = false
clip_contents = true
custom_minimum_size = Vector2(240, 256)
offset_left = 438.0
offset_top = 50.0
offset_right = 678.0
offset_bottom = 306.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hlj3r")

[node name="VBoxContainer" type="VBoxContainer" parent="LedsMatrixPanel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.0
offset_right = 108.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="LedsMatrixPanel/VBoxContainer"]
clip_contents = true
layout_mode = 2
columns = 5

[node name="LedMatrixButton" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton2" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton3" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton4" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton5" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton6" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton7" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton8" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton9" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton10" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton11" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton12" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton13" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton14" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton15" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton16" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton17" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton18" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton19" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton20" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton21" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton22" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton23" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton24" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="LedMatrixButton25" parent="LedsMatrixPanel/VBoxContainer/GridContainer" instance=ExtResource("9_gm37t")]
layout_mode = 2

[node name="ProgressBar" type="HSlider" parent="LedsMatrixPanel/VBoxContainer"]
layout_mode = 2
max_value = 7.0
value = 3.0
rounded = true
script = ExtResource("10_137hx")

[node name="PianoPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(944, 270)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -185.0
offset_right = 240.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_hlj3r")

[node name="HBoxContainer" type="HBoxContainer" parent="PianoPanel"]
custom_minimum_size = Vector2(0, 254)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PianoButton" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton2" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton3" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton4" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton5" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton6" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton7" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton8" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton9" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton10" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton11" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton12" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton13" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton14" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton15" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton16" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="PianoButton17" parent="PianoPanel/HBoxContainer" instance=ExtResource("13_bf5xs")]
custom_minimum_size = Vector2(51, 0)
layout_mode = 2

[node name="Godotinho" type="Sprite2D" parent="."]
position = Vector2(82, 477)
scale = Vector2(0.75, 0.75)
texture = ExtResource("8_2n0e4")

[node name="GotoMainScreenButton" parent="." instance=ExtResource("9_06kvj")]
offset_left = 705.0
offset_top = -213.248
offset_right = 820.0
offset_bottom = -165.248
text = "MAIN SCREEN"
sceneToTeleport = ExtResource("10_4gqy6")
